// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`NativeSelect renders native select 1`] = `
<div>
  <div
    class="Picasso-root"
  >
    <div
      class="relative inline-flex text-[1rem] cursor-pointer w-full"
    >
      <div
        class="MuiInputBase-root MuiOutlinedInput-root PicassoOutlinedInput-root PicassoOutlinedInput-rootFull PicassoOutlinedInput-rootMedium p-0 bg-white MuiInputBase-fullWidth"
      >
        <select
          aria-invalid="false"
          class="appearance-none select-none rounded-none min-w cursor-pointer focus:rounded-none [&_option]:bg-white [&_optgroup]:bg-white MuiInputBase-input MuiOutlinedInput-input PicassoOutlinedInput-input PicassoOutlinedInput-inputMedium w-full p-2 focus:bg-inheritColor pr-6"
        >
          <option
            disabled=""
            value=""
          >
            Choose an option...
          </option>
          <option
            aria-selected="true"
            value="val1"
          >
            text1
          </option>
          <option
            aria-selected="false"
            value="val2"
          >
            text2
          </option>
          <option
            aria-selected="false"
            value="val3"
          >
            text3
          </option>
        </select>
        <svg
          class="PicassoSvgDropdownArrows16-root absolute top-[calc(50%-0.5rem)] right-[0.3125rem] text-graphite text-[1rem] cursor-inherit pointer-events"
          style="min-width: 16px; min-height: 16px;"
          viewBox="0 0 16 16"
        >
          <path
            d="m10.997 10.29.707.707-3.707 3.707-3.707-3.707.707-.707 3 3 3-3Zm-3-9 3.707 3.707-.707.707-3-3-3 3-.707-.707 3-3 .707-.707Z"
          />
        </svg>
        <fieldset
          aria-hidden="true"
          class="PrivateNotchedOutline-root MuiOutlinedInput-notchedOutline PicassoOutlinedInput-notchedOutline"
          style="padding-left: 8px;"
        >
          <legend
            class="PrivateNotchedOutline-legend"
            style="width: 0.01px;"
          >
            <span>
              ​
            </span>
          </legend>
        </fieldset>
      </div>
    </div>
  </div>
</div>
`;

exports[`NativeSelect renders native select with the empty option enabled when enableReset is \`true\` 1`] = `
<div>
  <div
    class="Picasso-root"
  >
    <div
      class="relative inline-flex text-[1rem] cursor-pointer w-full"
    >
      <div
        class="MuiInputBase-root MuiOutlinedInput-root PicassoOutlinedInput-root PicassoOutlinedInput-rootFull PicassoOutlinedInput-rootMedium p-0 bg-white MuiInputBase-fullWidth"
      >
        <select
          aria-invalid="false"
          class="appearance-none select-none rounded-none min-w cursor-pointer focus:rounded-none [&_option]:bg-white [&_optgroup]:bg-white MuiInputBase-input MuiOutlinedInput-input PicassoOutlinedInput-input PicassoOutlinedInput-inputMedium w-full p-2 focus:bg-inheritColor pr-6"
        >
          <option
            value=""
          >
            Choose an option...
          </option>
          <option
            aria-selected="true"
            value="val1"
          >
            text1
          </option>
          <option
            aria-selected="false"
            value="val2"
          >
            text2
          </option>
          <option
            aria-selected="false"
            value="val3"
          >
            text3
          </option>
        </select>
        <svg
          class="PicassoSvgDropdownArrows16-root absolute top-[calc(50%-0.5rem)] right-[0.3125rem] text-graphite text-[1rem] cursor-inherit pointer-events"
          style="min-width: 16px; min-height: 16px;"
          viewBox="0 0 16 16"
        >
          <path
            d="m10.997 10.29.707.707-3.707 3.707-3.707-3.707.707-.707 3 3 3-3Zm-3-9 3.707 3.707-.707.707-3-3-3 3-.707-.707 3-3 .707-.707Z"
          />
        </svg>
        <fieldset
          aria-hidden="true"
          class="PrivateNotchedOutline-root MuiOutlinedInput-notchedOutline PicassoOutlinedInput-notchedOutline"
          style="padding-left: 8px;"
        >
          <legend
            class="PrivateNotchedOutline-legend"
            style="width: 0.01px;"
          >
            <span>
              ​
            </span>
          </legend>
        </fieldset>
      </div>
    </div>
  </div>
</div>
`;
